// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatusBadge matches snapshot for 'In-Shelf' 1`] = `
<div>
  <span
    class="inline-flex items-center justify-center rounded-[5px] text-sm font-normal lg:w-[85px] lg:h-[26px] lg:text-sm w-[70px] h-[22px] text-[12px] bg-[#42BB4E] text-white"
  >
    In-Shelf
  </span>
</div>
`;

exports[`StatusBadge matches snapshot for 'None' 1`] = `
<div>
  <span
    class="inline-flex items-center justify-center rounded-[5px] text-sm font-normal lg:w-[85px] lg:h-[26px] lg:text-sm w-[70px] h-[22px] text-[12px] bg-[#C7C7C7] text-white"
  >
    None
  </span>
</div>
`;
